Colaboratory を使用して作成しました

--- a/mask_detect.ipynb
+++ b/mask_detect.ipynb
@@ -6,7 +6,7 @@
       "name": "mask_detect.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNfOHhTuaXwvi2g0Z7Db0LL",
+      "authorship_tag": "ABX9TyNaA35a3aQBa8K6ceesl5ik",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,8 +54,8 @@
       },
       "source": [
         "import os\n",
-        "os.environ['KAGGLE_USERNAME']='atsuokudoh'\n",
-        "os.environ['KAGGLE_KEY']='2c22b7062c4e38911947952ea81ce017'"
+        "os.environ['KAGGLE_USERNAME']=''\n",
+        "os.environ['KAGGLE_KEY']=''"
       ],
       "execution_count": null,
       "outputs": []
